@@ -14,7 +14,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -30,30 +30,30 @@ public class SecurityConfig {
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(request -> {
                 CorsConfiguration config = new CorsConfiguration();
-                // Allow specific origin (e.g., your frontend app)
-                config.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-                config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-                config.setAllowCredentials(true); // If you need to send cookies/credentials
+                config.setAllowedOrigins(List.of("http://localhost:5173"));
+                config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+                config.setAllowCredentials(true);
                 return config;
             }))
-            .csrf(csrf -> csrf.disable()) // Disable CSRF for APIs (can be enabled if needed)
+            .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**","/api/auth/getAllUsers").permitAll()  // Public API endpoints
-                .requestMatchers("/api/users/**").authenticated() // Private API endpoints
-                .anyRequest().authenticated()  // Ensure all other requests are authenticated
+                .requestMatchers("/api/auth/**").permitAll()   // public user auth endpoints
+                .requestMatchers("/api/admin/login").permitAll()  // public admin auth endpoints
+                .anyRequest().authenticated()                   // all others require authentication
             );
-
         return http.build();
     }
 }
